Fix(security): Enforce share token revocation

--- a/templates/default/templates/links_folder_list.html
+++ b/templates/default/templates/links_folder_list.html
@@ -7,8 +7,8 @@
 		<a class="locked" title="#tooltip_lock" href="#locked" data-id="#ID"><span class="icon-lock" ></span></a>
 		<a class="burn" title="#tooltip_burn" href="index.php?p=admin&burn=#ID&token=#TOKEN"><span class="icon-fire" ></span></a>
 		<a class="renew" title="#tooltip_renew" href="index.php?p=admin&renew=#ID&token=#TOKEN"><span class="icon-renew" ></span></a>
-		<a class="link" title="#tooltip_link" data-id="#ID" href="#link_box"><span class="icon-link" ></span></a>
-		<a class="qrcode" title="#tooltip_qrcode" href="#qrcode"  data-id="#ID"><span class="icon-qrcode" ></span></a>
+                <a class="link" title="#tooltip_link" data-id="#ID" data-token="#SHARE_TOKEN" href="#link_box"><span class="icon-link" ></span></a>
+                <a class="qrcode" title="#tooltip_qrcode" href="#qrcode"  data-id="#ID" data-token="#SHARE_TOKEN"><span class="icon-qrcode" ></span></a>
 		#USERSHAREBUTTON			
 	</td>
 </tr>	
