--- a/templates/default/templates/view_image_icon.html
+++ b/templates/default/templates/view_image_icon.html
@@ -4,11 +4,11 @@
 		#ICONCLOSE
 		#ICONRENAME
 		#ICONMOVE
-		<a class="link" title="#tooltip_link" data-id="#ID" href="#link_box"><span class="icon-link" ></span></a>
+                <a class="link" title="#tooltip_link" data-id="#ID" data-token="#SHARE_TOKEN" href="#link_box"><span class="icon-link" ></span></a>
 		#ICONE_VISU
 	</div>
-	<a href="index.php?f=#ID" #TARGET >
-		<img src="index.php?f=#ID&thumbs" style="background:transparent;"/>
+        <a href="#SHARE_URL" #TARGET >
+                <img src="index.php?f=#ID&thumbs" style="background:transparent;"/>
 		<em>#SIZE</em><em title="#NAME">#NAME</em>
 	</a>
 </li>
