--- a/templates/default/templates/links_file_icon.html
+++ b/templates/default/templates/links_file_icon.html
@@ -4,10 +4,10 @@
 		#ICONCLOSE
 		#ICONRENAME
 		#ICONMOVE
-		<a class="link" title="#tooltip_link" data-id="#ID" href="#link_box"><span class="icon-link" ></span></a>
+                <a class="link" title="#tooltip_link" data-id="#ID" data-token="#SHARE_TOKEN" href="#link_box"><span class="icon-link" ></span></a>
 		#USERSHAREBUTTON
 	</div>
-	<a href="index.php?f=#ID" download="#NAME">
+        <a href="#SHARE_URL" download="#NAME">
 		<span class="icon-file ext #EXTENSION"><em>#EXTENSION</em></span>
 		<em>#SIZE</em><em title="#NAME">#NAME</em>
 	</a>
