--- a/templates/default/templates/view_file_icon.html
+++ b/templates/default/templates/view_file_icon.html
@@ -4,11 +4,11 @@
 		#ICONCLOSE
 		#ICONRENAME
 		#ICONMOVE
-		<a class="link" title="#tooltip_link" data-id="#ID" href="#link_box"><span class="icon-link" ></span></a>
+                <a class="link" title="#tooltip_link" data-id="#ID" data-token="#SHARE_TOKEN" href="#link_box"><span class="icon-link" ></span></a>
 		#ICONE_VISU
 		#ICONE_EDIT
 	</div>
-	<a href="index.php?f=#ID" #TARGET>
+        <a href="#SHARE_URL" #TARGET>
 		<span class="icon-file ext #EXTENSION"><em>#EXTENSION</em></span>
 		<em>#SIZE</em><em title="#NAME">#NAME</em>
 	</a>
