--- a/templates/default/templates/view_folder_icon.html
+++ b/templates/default/templates/view_folder_icon.html
@@ -4,7 +4,7 @@
 		#ICONCLOSE
 		#ICONRENAME
 		#ICONMOVE
-		<a class="link" title="#tooltip_link" data-id="#ID" href="#link_box"><span class="icon-link" ></span></a>
+                <a class="link" title="#tooltip_link" data-id="#ID" data-token="#SHARE_TOKEN" href="#link_box"><span class="icon-link" ></span></a>
 		<a class="zipfolder" title="#tooltip_zipfolder" href="index.php?p=admin&zipfolder=#ID&token=#TOKEN"><span class="icon-download-cloud" ></span></a>
 	</div>
 	<a href="index.php?p=admin&path=#FICHIER&token=#TOKEN" >
