--- a/templates/default/templates/view_shared_file_icon.html
+++ b/templates/default/templates/view_shared_file_icon.html
@@ -1,10 +1,10 @@
 
 		<li class="folder #CLASS" title="#TITLE">
 			<div class="buttons">
-				<a class="link" title="#tooltip_link" data-id="#ID" href="#link_box"><span class="icon-link" ></span></a>
+                                <a class="link" title="#tooltip_link" data-id="#ID" data-token="#SHARE_TOKEN" href="#link_box"><span class="icon-link" ></span></a>
 				<a class="zipfolder" title="#tooltip_zipfolder" href="index.php?p=admin&zipfolder=#ID&token=#TOKEN"><span class="icon-download-cloud" ></span></a>
 			</div>
-			<a href="index.php?f=#ID&token=#TOKEN" >
+                        <a href="#SHARE_URL" >
 				<span class="icon-file ext #EXTENSION"><em>#EXTENSION</em></span><span class="owner">#FROM</span>
 				<em title="#NAME">#NAME</em>
 			</a>
