--- a/templates/default/templates/view_shared_folder_list.html
+++ b/templates/default/templates/view_shared_folder_list.html
@@ -1,12 +1,12 @@
 
 <tr class="#CLASS">
 	<td></td>
-	<td class="table_image"><a href="index.php?f=#ID"><span class="icon-userfolder blue" ></span></a></td>
-	<td class="table_filename"><a href="index.php?f=#ID">#NAME</a></td>
+        <td class="table_image"><a href="#SHARE_URL"><span class="icon-userfolder blue" ></span></a></td>
+        <td class="table_filename"><a href="#SHARE_URL">#NAME</a></td>
 	<td class="table_filesize owner">#FROM</td>
 	<td class="table_filetype"></td>
 	<td class="table_buttons">
-		<a class="link" title="#tooltip_link" data-id="#ID" href="#link_box"><span class="icon-link" ></span></a>
+                <a class="link" title="#tooltip_link" data-id="#ID" data-token="#SHARE_TOKEN" href="#link_box"><span class="icon-link" ></span></a>
 		<a class="zipfolder" title="#tooltip_zipfolder" href="index.php?p=admin&zipfolder=#ID&token=#TOKEN"><span class="icon-download-cloud" ></span></a>	
 	</td>
 </tr>
